* v1.6 ->

- Skip essid if it's length 0 or if first by is zero-byte (hidden network)
- Allow reading broken .cap files even it has been cut short in the middle of a packet

* v1.5 -> v1.6

- Added support to read prism header with cap2hccapx
- Fixed timestamp handling in cap2hccapx

* v1.4 -> v1.5

- Added support to read radiotap header with cap2hccapx
- Fixed packet handling for cap2hccapx on windows

* v1.3 -> v1.4

- Add pragma to cap2hccapx.c to workaround broken packed handling on mingw

* v1.2 -> v1.3

- Added cap2hccapx.c
- Added ct3_to_ntlm.c
- Added deskey_to_ntlm.pl
- Added tmesis.pl
- Added release makefile target: move binaries from src folder into bin folder
- cleanup-rules: fixes #12, allow @X (purge) rule for the rule-engine on GPU

* v1.1 -> v1.2

- Open Source the project
- License is MIT
- Moved repository to github: https://github.com/hashcat/hashcat-utils
- Added CHANGES
- Added LICENSE
- Added README.md
